--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   json_annotation: ^4.9.0
   supabase_flutter: ^2.10.3
   google_sign_in: ^7.2.0
+  intl: ^0.20.2
 
 dev_dependencies:
   flutter_test:
