--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   supabase_flutter: ^2.10.3
   google_sign_in: ^7.2.0
   intl: ^0.20.2
+  image_picker: ^1.2.1
 
 dev_dependencies:
   flutter_test:
