--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,9 @@ dependencies:
   google_sign_in: ^7.2.0
   intl: ^0.20.2
   image_picker: ^1.2.1
+  flutter_map: ^8.2.2
+  latlong2: ^0.9.1
+  http: ^1.6.0
 
 dev_dependencies:
   flutter_test:
